--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^7.8.6",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/stack": "^7.6.7",
+    "babel-preset-expo": "^54.0.7",
     "expo": "~54.0.25",
     "expo-haptics": "^15.0.7",
     "expo-linear-gradient": "^15.0.7",
@@ -23,7 +24,7 @@
     "react-native": "0.81.5",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "^4.1.5",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.2"
